overlapping issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ body{
   min-width: 400px;
    background: #fff;
 }
+.container-fluid {
+  width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+}
 
 .data-pan
 {
@@ -26,6 +31,11 @@ position: absolute;
 left:0 ;
 -webkit-transition: left 1s; /* Safari prior 6.1 */
  transition: left 1s;
+ 
+}
+.data-pan-inner{
+  display: grid;
+ height: 80%;
 }
 .signup .data-pan{
   position: absolute;
@@ -56,15 +66,33 @@ left:0 ;
   margin-top:20px
 }
 .signin-content,.signup-content{
- position: absolute;
- left: 50%;
- top: 50%;
- -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  display: none;
+    
+   margin:auto;
+   display: none;
   -webkit-transition: display 1s; /* Safari prior 6.1 */
   transition: display  1s;
+   
 }
+
+/* .signin-content{
+  
+  position: absolute;
+    width: 400px;
+    height: 350px;
+     top: 50%;
+    left: 50%;
+    margin: -175px 0 0 -200px;
+}
+.signup-content{
+  position: absolute;
+    width: 400px;
+    height: 550px;
+   
+    top: 50%;
+    left: 50%;
+    margin: -225px 0 0 -200px;
+} */
+
 .show-log-pane{
   display: block;
   -webkit-transition: display 1s; /* Safari prior 6.1 */
@@ -133,6 +161,10 @@ font-size: 12px
 
 @media only screen and (max-width: 600px) {
   
+  .data-pan-inner{
+    display:unset;
+    height: 100%;
+  }
   .data-pan
   {
   position: absolute;
